--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 # PadreMutwa.github.io
-Project website
+Welcome to Roger's website!
+
+Click the link below to view my Project
+
+<a href="./EventInvite.html">Event Invite</a>
