--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-# PadreMutwa.github.io
-Welcome to Roger's website!
+<p># PadreMutwa.github.io
+<p>Welcome to Roger's website!</p>
 
-Click the link below to view my Project
+<p>Click the link below to view my Project</p>
 
-<a href="./EventInvite.html">Event Invite</a>
+<p><a href="./EventInvite.html">Event Invite</a></p>
