--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<p># PadreMutwa.github.io
-<p>Welcome to Roger's website!</p>
+<html>
 
-<p>Click the link below to view my Project</p>
+  <head>
+    <title>Link to Roger's Website</title>
+  </head>
 
-<p><a href="./EventInvite.html">Event Invite</a></p>
+<body>
+  <h1>Welcome to Roger's Website Landing Page</h1>
+
+  <h3>Click the link below to view my Project</h3>
+
+    <p><a href="./EventInvite.html">Event Invite</a></p>
+</body>
+
+</html>
